tests/matrices/invalid/invalid_vector_coord_too_long.mtx
%%MatrixMarket vector coordinate real general
4 3
1 101
2 22
4 404
3 303
